Final retrieval configs

--- a/DENIS_J0255/retrieval_figures.ipynb
+++ b/DENIS_J0255/retrieval_figures.ipynb
@@ -27,8 +27,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  analysing data from ./retrieval_outputs/DENIS_J0255_retrieval_outputs_synthetic_20/test_.txt\n",
-      "(1801, 20)\n"
+      "  analysing data from ./retrieval_outputs/DENIS_J0255_retrieval_outputs_187/test_.txt\n",
+      "(2069, 33)\n"
      ]
     }
    ],
@@ -66,7 +66,8 @@
     "\n",
     "res = read_results(\n",
     "    #prefix='./retrieval_outputs/DENIS_J0255_retrieval_outputs_186/test_', n_params=30\n",
-    "    prefix='./retrieval_outputs/DENIS_J0255_retrieval_outputs_synthetic_20/test_', n_params=20\n",
+    "    #prefix='./retrieval_outputs/DENIS_J0255_retrieval_outputs_synthetic_20/test_', n_params=20\n",
+    "    prefix='./retrieval_outputs/DENIS_J0255_retrieval_outputs_187/test_', n_params=33\n",
     "    )\n",
     "\n",
     "posterior_1, bestfit_1, PT_1, Chem_1, int_contr_em_1, int_contr_em_per_order_1, int_opa_cloud_1, m_spec_1, d_spec_1, LogLike_1 = res\n",
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +84,7 @@
     "#posterior_color = plt.get_cmap('RdPu')(0.9)\n",
     "posterior_color = plt.get_cmap('RdPu')(0.85)\n",
     "bestfit_color = plt.get_cmap('Reds')(0.6)\n",
-    "bins = 25\n",
+    "bins = 20\n",
     "\n",
     "envelope_cmap = mpl.colors.LinearSegmentedColormap.from_list(\n",
     "    name='envelope_cmap', colors=[posterior_color, posterior_color], \n",
@@ -91,21 +92,22 @@
     "envelope_colors = envelope_cmap([0.0,0.2,0.4,0.6,0.8])\n",
     "envelope_colors[:,-1] = np.array([0.0,0.2,0.4,0.6,0.8])\n",
     "\n",
-    "#indices = [9,14,15,16,17,18]\n",
-    "#indices = [8,10,19,20, 9,14,15,16,17,18]\n",
-    "#indices = [8,9,14,15,16,17,18]\n",
-    "indices = [0,1,3,7,4,5,6]\n",
+    "#indices = [0,1,3,7,4,5,6]\n",
+    "indices = [\n",
+    "    8,9,16,20,17,18,19, \n",
+    "    10,11,12\n",
+    "]\n",
     "labels = [\n",
     "    r'$R\\ (R_\\mathrm{Jup})$', #r'$R$', \n",
-    "    #r'$\\varepsilon_\\mathrm{limb}$', \n",
-    "    #r'$v\\sin i$', \n",
-    "    #r'$v_\\mathrm{rad}$', \n",
     "    r'$\\log\\ g$', #r'$\\log\\ g\\ (\\mathrm{cm\\ s^{-2}})$',\n",
     "    r'$\\log\\ \\mathrm{^{12}CO}$', \n",
     "    r'$\\log\\ ^{13}\\mathrm{CO}$', \n",
     "    r'$\\log\\ \\mathrm{H_2O}$', \n",
     "    r'$\\log\\ \\mathrm{CH_4}$', \n",
     "    r'$\\log\\ \\mathrm{NH_3}$', \n",
+    "    r'$\\varepsilon_\\mathrm{limb}$', \n",
+    "    r'$v\\ \\sin i\\ (\\mathrm{km\\ s^{-1}})$', \n",
+    "    r'$v_\\mathrm{rad}\\ (\\mathrm{km\\ s^{-1}})$', \n",
     "    ]\n",
     "\n",
     "# Compute the 0.16, 0.5, and 0.84 quantiles\n",
@@ -120,7 +122,7 @@
     "    \n",
     "median_params = np.array(list(param_quantiles[:,1]))\n",
     "\n",
-    "fig = plt.figure(figsize=(10,10))\n",
+    "fig = plt.figure(figsize=(11,11))\n",
     "\n",
     "fig = corner.corner(\n",
     "    posterior_1[:,indices], \n",
@@ -131,10 +133,10 @@
     "    use_math_text=True, \n",
     "    title_fmt='.2f', \n",
     "    title_kwargs={'fontsize':10},#, 'loc':'left', 'x':0.05}, \n",
-    "    labelpad=0.08, \n",
+    "    labelpad=0.18, \n",
     "    range=param_range[indices], \n",
     "    bins=bins, \n",
-    "    max_n_ticks=3, \n",
+    "    max_n_ticks=2, \n",
     "\n",
     "    quantiles=[0.16,0.84,0.50], \n",
     "    color=posterior_color, \n",
@@ -174,33 +176,59 @@
     "\n",
     "    ax[i,i].get_lines()[2].set(linewidth=1, linestyle='-')\n",
     "\n",
+    "    ax[i,i].set_title(ax[i,i].get_title().replace(' = ', '\\n'), fontsize=11)\n",
+    "\n",
     "    # Adjust the axis-limits\n",
     "    for j in range(i):\n",
     "        ax[i,j].set(ylim=param_range[indices][i])\n",
     "    for h in range(ax.shape[0]):\n",
     "        ax[h,i].set(xlim=param_range[indices][i])\n",
     "\n",
-    "ax[0,0].get_xlabel()\n",
+    "    new_label = ax[-1,i].get_xlabel()\n",
+    "    if ('\\ (' in new_label) and (')' in new_label):\n",
+    "        new_label, new_label_end = new_label.split('\\ (')[:-1], new_label.split('\\ (')[-1]\n",
+    "        new_label.append(new_label_end.split(')')[-1])\n",
+    "        new_label = ''.join(new_label)\n",
+    "\n",
+    "    ax[-1,i].set_xlabel(new_label, fontsize=11)\n",
+    "\n",
+    "    new_label = ax[i,0].get_ylabel()\n",
+    "    if ('\\ (' in new_label) and (')' in new_label):\n",
+    "        new_label, new_label_end = new_label.split('\\ (')[:-1], new_label.split('\\ (')[-1]\n",
+    "        new_label.append(new_label_end.split(')')[-1])\n",
+    "        new_label = ''.join(new_label)\n",
+    "\n",
+    "    ax[i,0].set_ylabel(new_label, fontsize=11)\n",
     "\n",
     "l, r = 0.07, 0.95\n",
     "b, t = 0.07, 0.95\n",
     "fig.subplots_adjust(left=l, right=r, top=t, bottom=b, wspace=0, hspace=0)\n",
     "\n",
     "#x0, y0 = 0.59, 0.59\n",
-    "x0, y0 = 0.62, 0.62; r, t = 0.97, 0.97\n",
+    "#x0, y0 = 0.62, 0.62; r, t = 0.97, 0.97\n",
+    "x0, y0 = 0.59, 0.59; r, t = 0.97, 0.97\n",
     "ax_PT = fig.add_axes([x0,y0,r-x0,t-y0])#, autoscale_on=False)\n",
     "ax_PT.set(\n",
     "    yscale='log', ylim=(1e-6,1e2), ylabel=r'$P\\ (\\mathrm{bar})$', \n",
-    "    xlim=(0,3200), xlabel=r'$T\\ (\\mathrm{K})$', \n",
+    "    xlim=(0,3500), xlabel=r'$T\\ (\\mathrm{K})$', \n",
     "    )\n",
     "ax_PT.invert_yaxis()\n",
     "\n",
+    "ax_PT.set_xlabel(ax_PT.get_xlabel(), fontsize=11)\n",
+    "plt.xticks(fontsize=11)\n",
+    "ax_PT.set_ylabel(ax_PT.get_ylabel(), fontsize=11)\n",
+    "plt.yticks(fontsize=11)\n",
+    "\n",
+    "leg_handles, leg_labels = [], []\n",
     "for i in range(3):\n",
-    "    ax_PT.fill_betweenx(\n",
+    "    \n",
+    "    c = ax_PT.fill_betweenx(\n",
     "        y=PT_1.pressure, x1=PT_1.temperature_envelopes[i], \n",
     "        x2=PT_1.temperature_envelopes[i+1], \n",
     "        color=envelope_colors[i+1], ec='none', \n",
     "        )\n",
+    "    #leg_handles.append(c); leg_labels.append(r'$'+f'{3-i}'+'\\sigma$')\n",
+    "    leg_handles.append(c); leg_labels.append([r'$99\\%$', r'$95\\%$', r'$68\\%$'][i])\n",
     "\n",
     "    ax_PT.fill_betweenx(\n",
     "        y=PT_1.pressure, x1=PT_1.temperature_envelopes[-i-2], \n",
@@ -210,22 +238,37 @@
     "\n",
     "# Plot the median PT\n",
     "ax_PT.plot(\n",
-    "    PT_1.temperature_envelopes[3], PT_1.pressure, c=posterior_color, lw=1\n",
+    "    PT_1.temperature_envelopes[3], PT_1.pressure, \n",
+    "    c=posterior_color, lw=1\n",
     "    )\n",
     "\n",
     "SONORA_temperature = np.loadtxt('./retrieval_outputs/DENIS_J0255_retrieval_outputs_synthetic_20/test_data/SONORA_temperature.dat')\n",
     "SONORA_RCB = np.loadtxt('./retrieval_outputs/DENIS_J0255_retrieval_outputs_synthetic_20/test_data/SONORA_RCB.dat').flatten()[0]\n",
-    "ax_PT.plot(SONORA_temperature, PT_1.pressure, c='k', lw=1, )#ls=(5,(5,5)))\n",
-    "ax_PT.plot(\n",
-    "    np.interp(SONORA_RCB, xp=PT_1.pressure, fp=SONORA_temperature), SONORA_RCB, 'ko'\n",
-    "    )\n",
+    "\n",
+    "l = ax_PT.plot(SONORA_temperature, PT_1.pressure, c='k', lw=1)\n",
+    "leg_handles.append(*l); leg_labels.append('SONORA PT profile')\n",
+    "\n",
+    "#ax_PT.plot(\n",
+    "#    np.interp(SONORA_RCB, xp=PT_1.pressure, fp=SONORA_temperature), SONORA_RCB, 'ko', markersize=5\n",
+    "#    )\n",
     "\n",
     "ax_contr = ax_PT.twiny()\n",
-    "ax_contr.plot(int_contr_em_1, PT_1.pressure, c=posterior_color, ls='--')#, alpha=0.7)\n",
+    "l = ax_contr.plot(int_contr_em_1, PT_1.pressure, c='k', ls='--')#, alpha=0.7)\n",
+    "leg_handles.append(*l); leg_labels.append('Emission contribution')\n",
     "\n",
     "ax_contr.set(xlim=(0, 1.05*np.nanmax(int_contr_em_1)))\n",
     "ax_contr.tick_params(\n",
     "    axis='x', which='both', top=False, labeltop=False\n",
+    "    )\n",
+    "\n",
+    "ax_PT.legend(leg_handles[:3], leg_labels[:3], \n",
+    "    loc='upper right', bbox_to_anchor=(1,0.45), ncol=3, \n",
+    "    handlelength=1.5, handletextpad=0.5, columnspacing=1.1, \n",
+    "    reverse=True\n",
+    "    )\n",
+    "ax_contr.legend(leg_handles[3:], leg_labels[3:], \n",
+    "    loc='lower right', bbox_to_anchor=(1,0.43), ncol=1, \n",
+    "    handlelength=1.5, \n",
     "    )\n",
     "\n",
     "fig.savefig('./plots/nominal_corner.pdf')\n",
@@ -627,21 +670,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
+    "bestfit_color = plt.get_cmap('Oranges')(0.6)\n",
+    "\n",
     "#orders_for_zoom_in = [2,5]\n",
     "orders_for_zoom_in = [5]\n",
     "\n",
     "hspace = 0.12\n",
     "gridspec_kw={\n",
     "    'hspace': 0.0, \n",
-    "    'left': 0.08, 'right': 0.96, \n",
-    "    #'bottom': 0.06, 'top': 0.97, \n",
+    "    'left': 0.08, 'right': 0.96,  \n",
     "    'bottom': 0.08, 'top': 0.95, \n",
-    "    #'height_ratios': [1,0.4*2/5,hspace, 0.4*1,0.4*2/5]#,hspace, 0.4*1,0.4*2/5], \n",
-    "    'height_ratios': [1,0.6*2/5,hspace, 0.4*1,0.4*2/5]#,hspace, 0.4*1,0.4*2/5], \n",
+    "    'height_ratios': [0.7,0.4*0.35, hspace, 0.4*1,0.4*0.35]\n",
     "    }\n",
     "fig, ax = plt.subplots(\n",
     "    #figsize=(10,10), nrows=3*2+2, \n",
@@ -702,12 +745,21 @@
     "    ax_res[i+1].set(ylim=ax_res_ylim)\n",
     "    #ax_res_height = np.abs(ax_res[i+1].get_ylim()[1] - ax_res[i+1].get_ylim()[0])\n",
     "\n",
-    "ax_spec[0].set(ylim=(0,1.1e-14))\n",
+    "ax_spec[0].set(ylim=(0,1.4e-14))\n",
     "height = np.abs(np.diff(ax_spec[0].get_ylim()))\n",
     "\n",
     "height_ratio = gridspec_kw['height_ratios'][1] / gridspec_kw['height_ratios'][0]\n",
     "ax_res_ylim = (-0.5*height_ratio*height, +0.5*height_ratio*height)\n",
-    "ax_res[0].set(ylim=ax_res_ylim)\n",
+    "ax_res[0].set(\n",
+    "    yticks=np.arange(-6e-16,2*6e-16,6e-16), \n",
+    "    yticklabels=np.arange(-6e-16,2*6e-16,6e-16)/1e-14, \n",
+    "    ylim=ax_res_ylim, \n",
+    "    )\n",
+    "ax_res[-1].set(\n",
+    "    yticks=np.arange(-6e-16,2*6e-16,6e-16), \n",
+    "    yticklabels=np.arange(-6e-16,2*6e-16,6e-16)/1e-15, \n",
+    "    )\n",
+    "\n",
     "\n",
     "ax[-1].set(xlabel=r'Wavelength (nm)')\n",
     "ax[1].set(ylabel=r'Residuals')\n",
@@ -718,10 +770,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "hspace = 0.13\n",
     "gridspec_kw={\n",
     "    'hspace': 0.0, \n",
@@ -729,7 +782,7 @@
     "    'right': 0.96, \n",
     "    'bottom': 0.06, \n",
     "    'top': 0.97, \n",
-    "    'height_ratios': [1,0.4*2/5,hspace, 0.4*1,0.4*2/5], \n",
+    "    'height_ratios': [1,0.4*0.35,hspace, 0.4*1,0.4*0.35], \n",
     "    }\n",
     "fig, ax = plt.subplots(\n",
     "    figsize=(10,8), nrows=2*2+1, gridspec_kw=gridspec_kw\n",
@@ -782,13 +835,19 @@
     "    ax_res[i+1].set(ylim=ax_res_ylim)\n",
     "    #ax_res_height = np.abs(ax_res[i+1].get_ylim()[1] - ax_res[i+1].get_ylim()[0])\n",
     "\n",
-    "ax_spec[0].set(ylim=(0,1.1e-14))\n",
+    "ax_spec[0].set(ylim=(0,1.4e-14))\n",
     "height = np.abs(np.diff(ax_spec[0].get_ylim()))\n",
     "\n",
     "height_ratio = gridspec_kw['height_ratios'][1] / gridspec_kw['height_ratios'][0]\n",
     "ax_res_ylim = (-0.5*height_ratio*height, +0.5*height_ratio*height)\n",
-    "ax_res[0].set(ylim=ax_res_ylim)\n",
-    "    \n",
+    "ax_res[0].set(\n",
+    "    yticks=np.arange(-5e-16,2*5e-16,5e-16), \n",
+    "    ylim=ax_res_ylim, \n",
+    "    )\n",
+    "ax_res[-1].set(\n",
+    "    yticks=np.arange(-5e-16,2*5e-16,5e-16), \n",
+    "    )\n",
+    "\n",
     "ax[2].remove()\n",
     "#ax[5].remove()\n",
     "\n",
@@ -796,7 +855,16 @@
     "ax[1].set(ylabel=r'Residuals')\n",
     "ax[0].set(ylabel=r'$F_\\lambda\\ (\\mathrm{erg\\ s^{-1}\\ cm^{-2}\\ nm^{-1}})$')\n",
     "fig.savefig('./plots/bestfit_spec_zoom_ins.pdf')\n",
-    "plt.close(fig)"
+    "plt.close(fig)\n",
+    "'''"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PT profile tests"
    ]
   },
   {
