New synthetic PT retrieval config

--- a/DENIS_J0255/retrieval_figures.ipynb
+++ b/DENIS_J0255/retrieval_figures.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,12 +285,36 @@
     "    )\n",
     "\n",
     "'''\n",
-    "SONORA_temperature = np.loadtxt('./retrieval_outputs/DENIS_J0255_retrieval_outputs_synthetic_20/test_data/SONORA_temperature.dat')\n",
-    "SONORA_RCB = np.loadtxt('./retrieval_outputs/DENIS_J0255_retrieval_outputs_synthetic_20/test_data/SONORA_RCB.dat').flatten()[0]\n",
+    "for i, T in enumerate([1300,1400,1500]):\n",
+    "    c = plt.get_cmap('viridis')(i/2)\n",
+    "\n",
+    "    for j, g in enumerate([1000,1780,3160]):\n",
+    "        ls = ['-', '--', ':'][j]\n",
+    "\n",
+    "        SONORA_pressure, SONORA_temperature, _, _ = np.genfromtxt(\n",
+    "            f'./data/SONORA_PT_structures/structures_m+0.0/t{T}g{g}nc_m0.0.dat', \n",
+    "            skip_header=1, usecols=(1,2,4,5), delimiter=(3,12,10,11,8,8)\n",
+    "            ).T\n",
+    "        l = ax_PT.plot(SONORA_temperature, SONORA_pressure, c=c, lw=1, ls=ls)\n",
+    "        #leg_handles.append(*l); leg_labels.append('SONORA PT profile')\n",
+    "'''\n",
+    "T = 1400; g = 1780\n",
+    "#T = 1300; g = 1000\n",
+    "SONORA_pressure, SONORA_temperature, _, _ = np.genfromtxt(\n",
+    "    f'./data/SONORA_PT_structures/structures_m+0.0/t{T}g{g}nc_m0.0.dat', \n",
+    "    skip_header=1, usecols=(1,2,4,5), delimiter=(3,12,10,11,8,8)\n",
+    "    ).T\n",
+    "l = ax_PT.plot(SONORA_temperature, SONORA_pressure, c='sienna', lw=1.5, ls=(0,(6,3)), alpha=0.7)\n",
+    "leg_handles.append(*l); leg_labels.append('SONORA PT profile\\n'+r'$T_\\mathrm{eff}=1400\\ \\mathrm{K},\\ \\log\\ g=5.25$')\n",
+    "\n",
+    "'''\n",
+    "a = 26\n",
+    "SONORA_temperature = np.loadtxt(f'./retrieval_outputs/DENIS_J0255_retrieval_outputs_synthetic_{a}/test_data/SONORA_temperature.dat')\n",
+    "SONORA_RCB = np.loadtxt(f'./retrieval_outputs/DENIS_J0255_retrieval_outputs_synthetic_{a}/test_data/SONORA_RCB.dat').flatten()[0]\n",
     "\n",
     "l = ax_PT.plot(SONORA_temperature, PT_1.pressure, c='k', lw=1)\n",
     "leg_handles.append(*l); leg_labels.append('SONORA PT profile')\n",
-    "'''\n",
+    "#'''\n",
     "\n",
     "#ax_PT.plot(\n",
     "#    np.interp(SONORA_RCB, xp=PT_1.pressure, fp=SONORA_temperature), SONORA_RCB, 'ko', markersize=5\n",
@@ -317,7 +341,7 @@
     "    handlelength=1.5, \n",
     "    )\n",
     "\n",
-    "fig.savefig('./plots/nominal_corner.pdf')\n",
+    "fig.savefig('./plots/fiducial_corner.pdf')\n",
     "plt.close(fig)"
    ]
   },
@@ -450,7 +474,7 @@
     "#fig.tight_layout(rect=[0.08,0.08,1.0,1.0], h_pad=0, w_pad=0)\n",
     "#fig.subplots_adjust(wspace=0, hspace=0)\n",
     "\n",
-    "fig.savefig('./plots/nominal_corner.pdf')\n",
+    "fig.savefig('./plots/fiducial_corner.pdf')\n",
     "plt.close(fig)\n",
     "'''"
    ]
@@ -2246,7 +2270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
