Saving more parameters during evaluation

--- a/DENIS_J0255/retrieval_figures.ipynb
+++ b/DENIS_J0255/retrieval_figures.ipynb
@@ -112,7 +112,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5.38254113e-01  6.20660308e-01  7.07352081e-01]\n",
+      " [ 3.96290228e-01  4.53189329e-01  5.13946374e-01]\n",
+      " [ 2.77507320e-01  3.15320528e-01  3.55293860e-01]\n",
+      " [ 2.56855612e-01  2.98133948e-01  3.44338519e-01]\n",
+      " [ 2.80936491e-01  3.18911494e-01  3.59447013e-01]\n",
+      " [ 4.51297911e-01  4.98101103e-01  5.53882164e-01]\n",
+      " [ 5.92517612e-01  6.53528378e-01  7.18588692e-01]\n",
+      " [ 2.19188161e+01  2.38874728e+01  2.60027685e+01]\n",
+      " [ 7.58023399e-01  7.81384712e-01  8.03705698e-01]\n",
+      " [ 5.19887754e+00  5.26973776e+00  5.34164068e+00]\n",
+      " [ 5.97485570e-01  6.53624409e-01  7.07115288e-01]\n",
+      " [ 4.06888627e+01  4.10509073e+01  4.13930701e+01]\n",
+      " [ 2.24163272e+01  2.25492636e+01  2.26912165e+01]\n",
+      " [-9.55895382e+00 -4.82075546e+00  9.95388334e-01]\n",
+      " [-5.59981343e+00 -1.71800864e+00  2.67998526e+00]\n",
+      " [ 8.80970908e-01  1.00470107e+01  1.91453403e+01]\n",
+      " [-3.37351869e+00 -3.32466722e+00 -3.27318086e+00]\n",
+      " [-3.66696964e+00 -3.61659772e+00 -3.56508763e+00]\n",
+      " [-4.98239292e+00 -4.91647784e+00 -4.85164975e+00]\n",
+      " [-6.09447719e+00 -5.98805836e+00 -5.89054801e+00]\n",
+      " [-5.87940776e+00 -5.58833524e+00 -5.38822727e+00]\n",
+      " [-9.79161625e+00 -7.98670823e+00 -5.95095182e+00]\n",
+      " [-9.83016542e+00 -7.70129577e+00 -5.61776189e+00]\n",
+      " [-4.71044402e-01  8.49858086e-01  2.76704779e+00]\n",
+      " [ 1.73107012e+03  3.80304683e+03  5.75565713e+03]\n",
+      " [ 1.93500436e+03  2.61264948e+03  3.90998332e+03]\n",
+      " [ 1.66873089e+03  1.78661186e+03  1.97348040e+03]\n",
+      " [ 1.42147942e+03  1.50656899e+03  1.58263458e+03]\n",
+      " [ 1.01890832e+03  1.10657523e+03  1.18605788e+03]\n",
+      " [ 6.65815631e+02  7.28480866e+02  7.87836521e+02]\n",
+      " [ 1.28821667e+02  1.07155992e+03  1.92713326e+03]\n",
+      " [ 1.58020607e-01  3.12748498e-01  4.82992389e-01]]\n",
+      "[0.0015 0.025  0.16   0.5    0.84   0.975  0.9985]\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = np.array([0.5-0.997/2, 0.5-0.95/2, 0.5-0.68/2, 0.5, 0.5+0.68/2, 0.5+0.95/2, 0.5+0.997/2])\n",
+    "\n",
+    "param_quantiles = np.array(\n",
+    "    [af.quantiles(posterior_1[:,i], q=q) for i in range(posterior_1.shape[1])]\n",
+    "    )\n",
+    "print(param_quantiles[:,[1,3,-2]])\n",
+    "print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,8 +359,9 @@
     "    f'./data/SONORA_PT_structures/structures_m+0.0/t{T}g{g}nc_m0.0.dat', \n",
     "    skip_header=1, usecols=(1,2,4,5), delimiter=(3,12,10,11,8,8)\n",
     "    ).T\n",
-    "l = ax_PT.plot(SONORA_temperature, SONORA_pressure, c='sienna', lw=1.5, ls=(0,(6,3)), alpha=0.7)\n",
-    "leg_handles.append(*l); leg_labels.append('SONORA PT profile\\n'+r'$T_\\mathrm{eff}=1400\\ \\mathrm{K},\\ \\log\\ g=5.25$')\n",
+    "#l = ax_PT.plot(SONORA_temperature, SONORA_pressure, c='sienna', lw=1.5, ls=(0,(6,3)), alpha=0.7)\n",
+    "l = ax_PT.plot(SONORA_temperature, SONORA_pressure, c='sienna', lw=1.5, alpha=0.9)\n",
+    "leg_handles.append(*l); leg_labels.append('Sonora Bobcat PT profile\\n'+r'$T_\\mathrm{eff}=1400\\ \\mathrm{K},\\ \\log\\ g=5.25$')\n",
     "\n",
     "'''\n",
     "a = 26\n",
@@ -338,7 +394,7 @@
     "xy_legend[1] = xy_legend[1]-0.02\n",
     "ax_contr.legend(leg_handles[3:], leg_labels[3:], \n",
     "    loc='lower right', bbox_to_anchor=xy_legend, ncol=1, \n",
-    "    handlelength=1.5, \n",
+    "    handlelength=1.2, \n",
     "    )\n",
     "\n",
     "fig.savefig('./plots/fiducial_corner.pdf')\n",
@@ -481,18 +537,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_24030/3403913430.py:57: RuntimeWarning: overflow encountered in power\n",
+      "/tmp/ipykernel_165310/3403913430.py:57: RuntimeWarning: overflow encountered in power\n",
       "  [af.quantiles(10**posterior_1[:,i]/10**posterior_1[:,16], q=q) for i in range(posterior_1.shape[1])]\n",
       "/home/sam/Documents/PhD/CRIRES_data_reduction/crires_venv/lib/python3.10/site-packages/numpy/lib/function_base.py:4527: RuntimeWarning: invalid value encountered in subtract\n",
       "  diff_b_a = subtract(b, a)\n",
-      "/tmp/ipykernel_24030/3403913430.py:57: RuntimeWarning: overflow encountered in divide\n",
+      "/tmp/ipykernel_165310/3403913430.py:57: RuntimeWarning: overflow encountered in divide\n",
       "  [af.quantiles(10**posterior_1[:,i]/10**posterior_1[:,16], q=q) for i in range(posterior_1.shape[1])]\n"
      ]
     },
@@ -539,8 +595,9 @@
     "            )\n",
     "    fc = cmap(0.8)\n",
     "\n",
-    "    MMW = chem.mass_fractions['MMW']\n",
-    "\n",
+    "    # Read MMW posterior\n",
+    "    MMW = chem.mass_fractions_posterior['MMW']\n",
+    "    \n",
     "    mass = chem.read_species_info('12CO', info_key='mass')\n",
     "    line_species = chem.read_species_info('12CO', info_key='pRT_name')\n",
     "    posterior_12CO = MMW/mass * chem.mass_fractions_posterior[line_species]\n",
@@ -781,7 +838,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['line_species', 'pressure', 'n_atm_layers', 'mass_ratio_13CO_12CO', 'mass_ratio_C18O_12CO', 'mass_ratio_H2_18O_H2O', 'mass_fractions_envelopes', 'mass_fractions_posterior', 'CO_posterior', 'FeH_posterior', 'CO', 'FeH', 'P_quench', 'C_ratio', 'O_ratio', 'temperature', 'mass_fractions', 'C_ratio_posterior'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Chem_2.__dict__.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CO',\n",
+       " 'CO_posterior',\n",
+       " 'C_ratio',\n",
+       " 'C_ratio_posterior',\n",
+       " 'FeH',\n",
+       " 'FeH_posterior',\n",
+       " 'O_ratio',\n",
+       " 'P_quench',\n",
+       " '__call__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'line_species',\n",
+       " 'mass_fractions',\n",
+       " 'mass_fractions_envelopes',\n",
+       " 'mass_fractions_posterior',\n",
+       " 'mass_ratio_13CO_12CO',\n",
+       " 'mass_ratio_C18O_12CO',\n",
+       " 'mass_ratio_H2_18O_H2O',\n",
+       " 'n_atm_layers',\n",
+       " 'neglect_species',\n",
+       " 'pressure',\n",
+       " 'quench_carbon_chemistry',\n",
+       " 'read_species_info',\n",
+       " 'remove_species',\n",
+       " 'species_info',\n",
+       " 'species_plot_info',\n",
+       " 'temperature']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(Chem_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6340698583949467\n",
+      "0.09957535708809995\n",
+      "186.7245154009533\n",
+      "1.0354285969296682\n",
+      "dict_keys(['MMW', 'H2O_pokazatel_main_iso', 'CO_main_iso', 'CO_36', 'CH4_hargreaves_main_iso', 'NH3_coles_main_iso', 'CO2_main_iso', 'HCN_main_iso', 'H2', 'He'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.median(Chem_2.CO_posterior))\n",
+    "print(np.median(Chem_2.FeH_posterior))\n",
+    "print(np.median(Chem_2.C_ratio_posterior))\n",
+    "\n",
+    "print(Chem_2.mass_ratio_13CO_12CO)\n",
+    "\n",
+    "mass_fractions_wo_Pquench = Chem_2(\n",
+    "    params={\n",
+    "        'C/O':np.median(Chem_2.CO_posterior), \n",
+    "        'Fe/H':np.median(Chem_2.FeH_posterior), \n",
+    "        'P_quench':None, 'O_ratio':0, \n",
+    "        'C_ratio':np.median(Chem_2.C_ratio_posterior)\n",
+    "        }, \n",
+    "    temperature=PT_2.temperature_envelopes[3]\n",
+    "    )\n",
+    "print(mass_fractions_wo_Pquench.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.32571561 2.32571571 2.3257158  2.3257159  2.32571599 2.32571608\n",
+      " 2.32571613 2.32571621 2.3257163  2.32571648 2.32571681 2.32571804\n",
+      " 2.32572126 2.32571264 2.32571462 2.32577743 2.32599747 2.32636257\n",
+      " 2.32684062 2.32736943 2.32777418 2.3280345  2.32817613 2.32824842\n",
+      " 2.32828188 2.32829866 2.32830875 2.32830989 2.32831296 2.32831183\n",
+      " 2.32831232 2.32830469 2.3282943  2.32827524 2.32826616 2.32814495\n",
+      " 2.32786818 2.32741053 2.326958   2.32660078 2.32641039 2.32633056\n",
+      " 2.32634036 2.32643308 2.32877221 2.3328384  2.33497041 2.32970723\n",
+      " 2.2937236  2.17709891]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Chem_2.mass_fractions['MMW'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chem.mass_fractions['MMW']\n",
+    "\n",
+    "##########################################################\n",
+    "cmap = mpl.colors.LinearSegmentedColormap.from_list(\n",
+    "        'cmap', colors=['w', ec]\n",
+    "        )\n",
+    "fc = cmap(0.8)\n",
+    "\n",
+    "MMW = chem.mass_fractions['MMW']\n",
+    "\n",
+    "mass = chem.read_species_info('12CO', info_key='mass')\n",
+    "line_species = chem.read_species_info('12CO', info_key='pRT_name')\n",
+    "posterior_12CO = MMW/mass * chem.mass_fractions_posterior[line_species]\n",
+    "\n",
+    "mass = chem.read_species_info(species, info_key='mass')\n",
+    "line_species = chem.read_species_info(species, info_key='pRT_name')\n",
+    "posterior_X = MMW/mass * chem.mass_fractions_posterior[line_species]\n",
+    "\n",
+    "posterior_X /= posterior_12CO\n",
+    "\n",
+    "envelope_X = np.array(\n",
+    "    [af.quantiles(posterior_X[:,i], q=q) for i in range(posterior_X.shape[1])]\n",
+    "    ).T\n",
+    "\n",
+    "ax_VMR.plot(\n",
+    "    envelope_X[3], pressure, c=ec, lw=1, ls=ls\n",
+    "    )\n",
+    "ax_VMR.fill_betweenx(\n",
+    "    y=pressure, x1=envelope_X[1], x2=envelope_X[-2], \n",
+    "    fc=fc, alpha=0.3, ec='none', #ec=colors[i], ls='--'\n",
+    "    )  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +1049,8 @@
     "    ax_PT.fill_betweenx(\n",
     "        y=PT.pressure, x1=PT.temperature_envelopes[1], \n",
     "        x2=PT.temperature_envelopes[-2], \n",
-    "        color=envelope_colors[3], ec='none', \n",
+    "        #color=envelope_colors[3], ec='none', \n",
+    "        color=envelope_colors[2], ec='none', \n",
     "        )\n",
     "    ax_PT.plot(\n",
     "        PT.temperature_envelopes[3], PT.pressure, \n",
