New evaluation script

--- a/DENIS_J0255/retrieval_figures.ipynb
+++ b/DENIS_J0255/retrieval_figures.ipynb
@@ -41,12 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4267, 43008)\n"
+     ]
+    }
+   ],
    "source": [
     "ln_Ls_ref = np.load(f'{prefix}/DENIS_J0255_nominal_5/test_data/ln_L_per_pixel_posterior.npy')\n",
     "ln_Ls_ref = ln_Ls_ref.reshape((ln_Ls_ref.shape[0], 2048*7*3))\n",
+    "print(ln_Ls_ref.shape)\n",
     "\n",
     "d_flux_ref = np.load(f'{prefix}/DENIS_J0255_nominal_5/test_data/d_spec_flux.npy')\n",
     "\n",
@@ -61,12 +70,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4348, 43008)\n"
+     ]
+    }
+   ],
    "source": [
     "ln_Ls_wo_13CO = np.load(f'{prefix}/DENIS_J0255_wo_13CO/test_data/ln_L_per_pixel_posterior.npy')\n",
     "ln_Ls_wo_13CO = ln_Ls_wo_13CO.reshape((ln_Ls_wo_13CO.shape[0], 2048*7*3))\n",
+    "print(ln_Ls_wo_13CO.shape)\n",
     "\n",
     "d_flux_wo_13CO = np.load(f'{prefix}/DENIS_J0255_wo_13CO/test_data/d_spec_flux.npy')\n",
     "\n",
