--- a/DENIS_J0255/flux_calibration.ipynb
+++ b/DENIS_J0255/flux_calibration.ipynb
@@ -28,7 +28,7 @@
     }
    ],
    "source": [
-    "data_path = '/home/sam/Documents/PhD/CRIRES_data_reduction/retrieval_base/DENIS_J0255/retrieval_outputs/DENIS_J0255_retrieval_outputs_189/test_data'\n",
+    "data_path = './retrieval_outputs/DENIS_J0255_nominal_5/test_data'\n",
     "\n",
     "d_flux   = np.load(f'{data_path}/d_spec_flux.npy')\n",
     "d_err    = np.load(f'{data_path}/d_spec_err.npy')\n",
@@ -256,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
