Improved memory usage for GPs + new J-band config

--- a/DENIS_J0255/retrieval_figures.ipynb
+++ b/DENIS_J0255/retrieval_figures.ipynb
@@ -109,6 +109,7 @@
     }
    ],
    "source": [
+    "'''\n",
     "pRT_atm_1 = af.pickle_load(\n",
     "    './retrieval_outputs/DENIS_J0255_nominal_5/test_data/pRT_atm_broad.pkl'\n",
     "    )\n",
@@ -134,7 +135,8 @@
     "        for j in range(d_spec_1.n_dets):\n",
     "            ax.plot(d_spec_1.wave[i,j], m_spec_1.flux[i,j], c=plt.get_cmap('viridis')(h/10), lw=1)\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "'''"
    ]
   },
   {
