New retrieval config

--- a/Luhman_16/test.ipynb
+++ b/Luhman_16/test.ipynb
@@ -62,28 +62,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  analysing data from ./retrieval_outputs/order_6_ret_4/test_.txt\n",
-      "(2188, 36)\n"
+      "  analysing data from ./retrieval_outputs/fiducial_J_A_ret_1/test_.txt\n",
+      "(2388, 31)\n"
      ]
     }
    ],
    "source": [
     "res = read_results(\n",
-    "    prefix='./retrieval_outputs/order_6_ret_4/test_', n_params=36\n",
+    "    #prefix='./retrieval_outputs/order_6_ret_4/test_', n_params=36\n",
+    "    prefix='./retrieval_outputs/fiducial_J_A_ret_1/test_', n_params=31\n",
     ")\n",
     "posterior, bestfit, PT, Chem, _, _, _, m_spec, d_spec, LogLike, _, bestfit_params = res\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,11 +106,9 @@
     "        wlen_bords_micron=[(d_spec.wave.min()-5)/1e3,(d_spec.wave.max()+5)/1e3]\n",
     "        #wlen_bords_micron=[1,2.5]\n",
     "        ):\n",
-    "    print('?')\n",
     "    pRT_atm = Radtrans(\n",
     "        line_species=[species], wlen_bords_micron=wlen_bords_micron, mode='lbl'\n",
     "        )\n",
-    "    print('?')\n",
     "    res = pRT_atm.plot_opas(\n",
     "        species=[species], temperature=T, pressure_bar=P, return_opacities=True\n",
     "        )\n",
@@ -125,6 +124,7 @@
     "        wave_even, opa_even, epsilon=epsilon_limb, vsini=vsini\n",
     "        )\n",
     "    opa_rot_broad = instr_broadening(wave_even, opa_rot_broad, out_res=out_res, in_res=1e6)\n",
+    "    opa_rot_broad = opa_even\n",
     "\n",
     "    return wave_even, opa_rot_broad\n",
     "\n",
@@ -148,18 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "?\n",
-      "  Read line opacities of OH_main_iso...\n",
-      " Done.\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -172,8 +163,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "?\n"
+      "  Read line opacities of K...\n",
+      " Done.\n",
+      "\n"
      ]
     }
    ],
@@ -181,6 +173,7 @@
     "fig, ax = plt.subplots(figsize=(12,4))\n",
     "for i in range(d_spec.n_orders):\n",
     "    for j in range(d_spec.n_dets):\n",
+    "        continue\n",
     "        ax.plot(d_spec.wave[i,j,:], d_spec.flux[i,j,:] - LogLike.f[i,j]*m_spec.flux[i,j,:], c='k', lw=0.5)\n",
     "\n",
     "ax_opa = ax.twinx()\n",
@@ -211,12 +204,12 @@
     "#    lw=0.5, alpha=1\n",
     "#    )\n",
     "\n",
-    "#ax_opa.plot(\n",
-    "#    *opa_cross_sections(\n",
-    "#        'K', species_mass=39, T=1200, P=1, \n",
-    "#        ), \n",
-    "#    lw=0.5, alpha=1\n",
-    "#    )\n",
+    "ax_opa.plot(\n",
+    "    *opa_cross_sections(\n",
+    "        'K', species_mass=39, T=1200, P=1, \n",
+    "        ), \n",
+    "    lw=0.5, alpha=1\n",
+    "    )\n",
     "\n",
     "#ax_opa.plot(\n",
     "#    *opa_cross_sections(\n",
@@ -318,15 +311,15 @@
     "#    lw=0.5, alpha=1\n",
     "#    )\n",
     "\n",
-    "ax_opa.plot(\n",
-    "    *opa_cross_sections(\n",
-    "        'OH_main_iso', species_mass=17, T=1200, P=1, \n",
-    "        ), \n",
-    "    lw=0.5, alpha=1\n",
-    "    )\n",
+    "#ax_opa.plot(\n",
+    "#    *opa_cross_sections(\n",
+    "#        'OH_main_iso', species_mass=17, T=1200, P=1, \n",
+    "#        ), \n",
+    "#    lw=0.5, alpha=1\n",
+    "#    )\n",
     "\n",
     "#ax.set(xlim=(d_spec.wave[0].min(), d_spec.wave[0].max()))\n",
-    "\n",
+    "ax.set(xlim=(d_spec.wave[-3].min(), d_spec.wave[-3].max()))\n",
     "plt.savefig('./plots/opa_cross_sec.pdf')\n",
     "#plt.show()\n",
     "plt.close()"
