New retrieval config

--- a/DENIS_J0255/retrieval_figures.ipynb
+++ b/DENIS_J0255/retrieval_figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,9 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  analysing data from ./retrieval_outputs/DENIS_J0255_nominal_5/test_.txt\n",
+      "(4331, 32)\n"
+     ]
+    }
+   ],
    "source": [
     "res = read_results(\n",
     "    #prefix='./retrieval_outputs/DENIS_J0255_retrieval_outputs_186/test_', n_params=30\n",
@@ -2877,10 +2886,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig, ax = plt.subplots(figsize=(4,4))\n",
+    "\n",
+    "ax.plot(bestfit_params_1['temperature'], bestfit_params_1['pressure'], c='k', ls='-')\n",
+    "ax.plot([*bestfit_params_1['params']['T_knots'],bestfit_params_1['params']['T_0']], bestfit_params_1['params']['P_knots'], 'ko')\n",
+    "\n",
+    "#'''\n",
+    "for T_i, P_i in zip([*bestfit_params_1['params']['T_knots'],bestfit_params_1['params']['T_0']], bestfit_params_1['params']['P_knots']):\n",
+    "    ax.annotate(\n",
+    "        '', xy=(T_i-300, P_i), xytext=(T_i+300, P_i), ha='center', va='center', annotation_clip=True, zorder=-1, \n",
+    "        arrowprops={\n",
+    "            'arrowstyle':'<|-|>', 'color':'0.85',  \n",
+    "            'shrinkA':0.0, 'shrinkB':0.0, 'mutation_aspect':1, 'clip_box':ax.bbox\n",
+    "            }, \n",
+    "        )\n",
+    "#'''\n",
+    "ax.annotate(\n",
+    "    '', xy=(bestfit_params_1['params']['T_knots'][-4]-300, bestfit_params_1['params']['P_knots'][-5]), \n",
+    "    xytext=(bestfit_params_1['params']['T_knots'][-4]+300, bestfit_params_1['params']['P_knots'][-5]), \n",
+    "    ha='center', va='center', \n",
+    "    arrowprops={'arrowstyle':'<|-|>', 'fc':'k', 'shrinkA':0.0, 'shrinkB':0.0, 'mutation_aspect':1}, \n",
+    "    )\n",
+    "ax.annotate(\n",
+    "    r'$T_{i}$', \n",
+    "    xy=(bestfit_params_1['params']['T_knots'][-4]+80, 10**(bestfit_params_1['params']['log_P_knots'][-5]-0.3)), \n",
+    "    ha='left', va='center', \n",
+    "    )\n",
+    "\n",
+    "mean_P = 10**np.mean(\n",
+    "    [bestfit_params_1['params']['log_P_knots'][-6], bestfit_params_1['params']['log_P_knots'][-2]]\n",
+    "    )\n",
+    "ax.annotate(\n",
+    "    '', xy=(2500, mean_P), \n",
+    "    xytext=(2560, mean_P), \n",
+    "    ha='center', va='center', \n",
+    "    arrowprops={'arrowstyle':'-[', 'fc':'k', 'shrinkA':0.0, 'shrinkB':0.0, 'mutation_aspect':4}, \n",
+    "    )\n",
+    "ax.annotate(\n",
+    "    '', xy=(2600, 10**(np.log10(mean_P)+0.8)), \n",
+    "    xytext=(2600, 10**(np.log10(mean_P)-0.8)), \n",
+    "    ha='center', va='center', \n",
+    "    arrowprops={'arrowstyle':'<|-|>', 'fc':'k', 'shrinkA':0.0, 'shrinkB':0.0, 'mutation_aspect':1}, \n",
+    "    )\n",
+    "ax.annotate(r'$\\Delta\\ \\log\\ P_\\mathrm{PT}$', xy=(2650,mean_P), ha='left', va='center', )\n",
+    "\n",
+    "ax.set(\n",
+    "    yscale='log', ylim=(1e-6,1e2), ylabel=r'$P\\ (\\mathrm{bar})$', \n",
+    "    xlim=(1,3500), xlabel=r'$T\\ (\\mathrm{K})$', \n",
+    "    )\n",
+    "ax.invert_yaxis()\n",
+    "\n",
+    "#plt.show()\n",
+    "l, r = 0.18, 0.95\n",
+    "b, t = 0.17, 0.93\n",
+    "fig.subplots_adjust(left=l, right=r, top=t, bottom=b, wspace=0, hspace=0)\n",
+    "#fig.savefig('./plots/PT_example.png', dpi=500)\n",
+    "fig.savefig('./plots/PT_example.pdf')\n",
+    "plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "color_axis = 'k'\n",
+    "\n",
     "fig, ax = plt.subplots(figsize=(4,4), facecolor='none')\n",
     "\n",
     "ax.plot(bestfit_params_1['temperature'], bestfit_params_1['pressure'], c='w', ls='-')\n",
